--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 					<section id="main">
 						<header>
 							<span class="avatar"><img src="images/SS.jpg" alt="" /></span>
-							<h1>SRI SUVETHA C S -19BEC078</h1>
+							<h1>VIJAI SHREE - 19BEC064</h1>
 							<p>Design Sprint - Rapid Prototyping</p>
 						</header>
 						<!--
